Removed Linux@Business INF site, was removed from home page but missed on this page, reported by Jacques Le Roux; also some HTML clean ups to be valid XHTML 1.0 Transitional
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4993 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/marketing.html
+++ b/website/marketing.html
@@ -107,7 +107,7 @@
 
 
 <div style="float: left; width: 180px; margin-right: 10px;">
-  <TABLE border=0 width="100%" cellspacing="0" cellpadding="0" class="boxoutside">
+  <TABLE border="0" width="100%" cellspacing="0" cellpadding="0" class="boxoutside">
     <TR>
       <TD width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxtop">
@@ -137,12 +137,12 @@
   </TABLE>
 
   <br/>
-  <TABLE border=0 width="100%" cellspacing="0" cellpadding="0" class="boxoutside">
+  <TABLE border="0" width="100%" cellspacing="0" cellpadding="0" class="boxoutside">
     <TR>
       <TD width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxtop">
           <tr>
-            <td valign=middle align=left>
+            <td valign="middle" align="left">
               <div class="boxhead">Is OFBiz for Me?</div>
             </td>
           </tr>
@@ -153,7 +153,7 @@
       <TD width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxbottom">
           <tr>
-            <td align=left>
+            <td align="left">
               <div>&nbsp;-&nbsp;<a class="buttontext" href="ofbiz-for-me.html"><b>Is OFBiz for Me?</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="ofbiz-for-me.html#Introduction"><b>Introduction</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="ofbiz-for-me.html#buildvsbuy"><b>Asking Build vs. Buy</b></a></div>
@@ -176,12 +176,12 @@
   </TABLE>
 
   <br/>
-  <TABLE border=0 width="100%" cellspacing="0" cellpadding="0" class="boxoutside">
+  <TABLE border="0" width="100%" cellspacing="0" cellpadding="0" class="boxoutside">
     <TR>
       <TD width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxtop">
           <tr>
-            <td valign=middle align=left>
+            <td valign="middle" align="left">
               <div class="boxhead">Press Releases</div>
             </td>
           </tr>
@@ -192,7 +192,7 @@
       <TD width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxbottom">
           <tr>
-            <td align=left>
+            <td align="left">
               <div>&nbsp;-&nbsp;<a class="buttontext" href="pressrel-2.0.0.html"><b>Release 2.0.0</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="pressrel-20beta2.html"><b>Release 2.0 Beta 3</b></a></div>
             </td>
@@ -204,7 +204,7 @@
 </div>
 
 <div style="float: right; width: 180px; margin-left: 10px;">
-  <TABLE border=0 width="100%" cellspacing="0" cellpadding="0" class="boxoutside">
+  <table border="0" width="100%" cellspacing="0" cellpadding="0" class="boxoutside">
     <TR>
       <TD width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxtop">
@@ -226,18 +226,17 @@
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://neogia.labs.libre-entreprise.org/index.html" target="_blank"><b>Neogia</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://sourcetapcrm.sourceforge.net" target="_blank"><b>SourceTap CRM</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.mietta.info" target="_blank"><b>XtraMind Mietta 2</b></a></div>
-              <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.linux-at-business.com/article.php3?id_article=64" target="_blank"><b>Linux@Business INF (French)</b></a></div>
             </td>
           </tr>
         </table>
       </TD>
     </TR>
-  </TABLE>
+  </table>
 
-  <br>
-  <TABLE border=0 width="100%" cellspacing="0" cellpadding="0" class="boxoutside">
-    <TR>
-      <TD width="100%">
+  <br/>
+  <table border="0" width="100%" cellspacing="0" cellpadding="0" class="boxoutside">
+    <tr>
+      <td width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxtop">
           <tr>
             <td valign="middle" align="left">
@@ -245,10 +244,10 @@
             </td>
           </tr>
         </table>
-      </TD>
-    </TR>
-    <TR>
-      <TD width="100%">
+      </td>
+    </tr>
+    <tr>
+      <td width="100%">
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="boxbottom">
           <tr>
             <td align="left">
@@ -342,9 +341,9 @@
             </td>
           </tr>
         </table>
-      </TD>
-    </TR>
-  </TABLE>
+      </td>
+    </tr>
+  </table>
 
 </div>
 
@@ -383,44 +382,44 @@ them.</p>
 <div class="contenttext"><b>Sterling Okura (<a href="mailto:info@nowpulse.com">info@nowpulse.com</a>)</b></div>
 <div class="contenttext"><b>President</b></div>
 <div class="contenttext"><b>NowPulse (<a href="http://www.nowpulse.com" target="_blank">www.nowpulse.com</a>)</b></div>
-<br>
+<br/>
 <!-- No longer running OFBiz <div class="contenttext">Live site: <b><a href="http://www.signaturenutrition.com" target="_blank">Signature Nutrition</a></b></div> -->
 <div class="contenttext">Live site: <b><a href="http://www.firstendurance.com" target="_blank">First Endurance</a></b></div>
 <!-- =============================================================== -->
-<br>
-<hr class="sepbar">
+<br/>
+<hr class="sepbar"/>
 <!-- =============================================================== -->
-<p class="contenttext">I like to take a little credit for OFBiz.  The project had its beginnings in a company that I founded a couple of years ago.  We really had no idea about the direction we wanted to go until we hired David Jones as our chief software architect.  He took care of us then and he continues to take care of us now.  Unfortunately, our little startup had the same problem as many others - it didn't last.  We have all moved on to other things.
-<p class="contenttext">One thing remains constant however - we are all using OFBiz in our new pursuits.
-<p class="contenttext">David and his team have taken those snippets of code and built a sophisticated project that can run just about any business.  I am amazed at what OFBiz can do now and what its promise for the future is.
-<p class="contenttext">My company, Partner Homes, builds houses with the direct involvement of our customer in a homebuilding role.  Many of our clients have no experience in building homes - we"re training them the whole way.  We use OFBiz to tie our projects together with sophisticated task management designed for the amateur homebuilder (built on the WorkEffort module).  In fact, our entire organization, from top to bottom, is run on OFBiz.
-<p class="contenttext">I wouldn't have it any other way.
+<p class="contenttext">I like to take a little credit for OFBiz.  The project had its beginnings in a company that I founded a couple of years ago.  We really had no idea about the direction we wanted to go until we hired David Jones as our chief software architect.  He took care of us then and he continues to take care of us now.  Unfortunately, our little startup had the same problem as many others - it didn't last.  We have all moved on to other things.</p>
+<p class="contenttext">One thing remains constant however - we are all using OFBiz in our new pursuits.</p>
+<p class="contenttext">David and his team have taken those snippets of code and built a sophisticated project that can run just about any business.  I am amazed at what OFBiz can do now and what its promise for the future is.</p>
+<p class="contenttext">My company, Partner Homes, builds houses with the direct involvement of our customer in a homebuilding role.  Many of our clients have no experience in building homes - we"re training them the whole way.  We use OFBiz to tie our projects together with sophisticated task management designed for the amateur homebuilder (built on the WorkEffort module).  In fact, our entire organization, from top to bottom, is run on OFBiz.</p>
+<p class="contenttext">I wouldn't have it any other way.</p>
 
 <div class="contenttext"><b>Stephen Loosli (<a href="mailto:stephen@partnerhomes.com">stephen@partnerhomes.com</a>)</b></div>
 <div class="contenttext"><b>President</b></div>
 <div class="contenttext"><b>Partner Homes (<a href="http://www.partnerhomes.com"
 target="_blank">www.partnerhomes.com</a>)</b></div>
-<br>
+<br/>
 <div class="contenttext">Live site:
 <b><a href="http://www.partnerhomes.com" target="_blank">Partner Homes</a></b></div>
 <!-- =============================================================== -->
-<br>
-<hr class="sepbar">
+<br/>
+<hr class="sepbar"/>
 <!-- =============================================================== -->
-<p class="contenttext">We first started using OFBiz for a music retail and wholesale site combined and was so impressed with it that we decided to build a hosting and service company based around the OFBiz platform. It's ease of customizations, development and design were just some of the key factors that lead us to working with OFBiz. The ability to offer our accounts a feature rich eBusiness suite out of the box is making us look like heroes to our small and mid size business customers.
-<p class="contenttext">Most of our accounts had the need and desire for sophisticated eBusiness applications, but just could not justify the cost of other business suites. They were very receptive to the OFBiz value and were excited to have eBusiness tools to offer their customers and sales staff.
-<p class="contenttext">We highly recommend web developers and web designers that have cost conscience customers to develop OFBiz sites. The future looks very exciting.
+<p class="contenttext">We first started using OFBiz for a music retail and wholesale site combined and was so impressed with it that we decided to build a hosting and service company based around the OFBiz platform. It's ease of customizations, development and design were just some of the key factors that lead us to working with OFBiz. The ability to offer our accounts a feature rich eBusiness suite out of the box is making us look like heroes to our small and mid size business customers.</p>
+<p class="contenttext">Most of our accounts had the need and desire for sophisticated eBusiness applications, but just could not justify the cost of other business suites. They were very receptive to the OFBiz value and were excited to have eBusiness tools to offer their customers and sales staff.</p>
+<p class="contenttext">We highly recommend web developers and web designers that have cost conscience customers to develop OFBiz sites. The future looks very exciting.</p>
 <div class="contenttext"><b>Robert Stewart (<a href="mailto:rhs@angleparktech.com">rhs@angleparktech.com</a>)</b></div>
 <div class="contenttext"><b>President</b></div>
-<br>
+<br/>
 <!-- <div class="contenttext">Live site: <b><a href="http://www.audiostar.info" target="_blank">Audiostar Music</a></b></div>
 <div class="contenttext"><b>Angle Park Technologies (<a href="http://www.angleparktech.com" target="_blank">www.angleparktech.com</a>)</b></div>
 <div class="contenttext">Demo site: <b><a href="http://www.angleparktech.com:8080/ecommerce/control/main" target="_blank">eCommerce Demo</a></b></div>
 <div class="contenttext">Demo site: <b><a href="http://www.angleparktech.com:8080/ordermgr/control/login/main?USERNAME=demoadmin&PASSWORD=ofbiz" target="_blank">Management Console</a></b></div>
 -->
 <!-- =============================================================== -->
-<br>
-<hr class="sepbar">
+<br/>
+<hr class="sepbar"/>
 <!-- =============================================================== -->
 <p class="contenttext">I (we) are currently using at least the Entity Engine portion of ofbiz
 in a production application.  I have planned to evaluate/include other
@@ -430,10 +429,10 @@ Inventory, and Retail systems management.  Unfortunately, all of our
 current web sites that utilize ofbiz are not public.  The public site is not
 written in Java and is very old (not too exciting).  If anyone is looking for
 supply chain/retail solutions though, feel free to contact us!  Our customers
-range from large home entertainment suppliers to large retailers.
+range from large home entertainment suppliers to large retailers.</p>
 
 <p class="contenttext">We really appreciate everything that you've put into the ofbiz package,
-and hopefully as we get more familiar we will be able to make some valuable contributions to the project.
+and hopefully as we get more familiar we will be able to make some valuable contributions to the project.</p>
 
 <div class="contenttext"><b>Tim Kosacek (email: tkosacek at domain visioninfo.com)</b></div>
 <div class="contenttext"><b>Software Architect</b></div>
@@ -443,10 +442,10 @@ and hopefully as we get more familiar we will be able to make some valuable cont
 <div class="contenttext">(248) 584-4300</div>
 
 <!-- =============================================================== -->
-<br>
-<hr class="sepbar">
+<br/>
+<hr class="sepbar"/>
 <!-- =============================================================== -->
-<p class="contenttext">I have noticed that the deployed shopping cart has needed minimal upkeep from us.
+<p class="contenttext">I have noticed that the deployed shopping cart has needed minimal upkeep from us.</p>
 
 <p class="contenttext">It has been argued that OFBiz is "too much framework for what we need",
 but one of the greatest benefits that I have seen is that when multiple
@@ -456,29 +455,29 @@ as they start talking about "work efforts" and "contact methods", I immediately
 understand 90% of what they are doing.  They don't have to spend time
 developing/explaining their data schemas.  I believe that it has saved
 us time already, and that it will save us more time as projects mature and
-new projects deploy.
+new projects deploy.</p>
 
 <p class="contenttext">One of our key marketing points is our ability to quickly "brand" a
 product with a new customers look and feel and then deploy it fairly quickly.
-The OFBiz framework has much of this ability already built in.
+The OFBiz framework has much of this ability already built in.</p>
 
 <p class="contenttext">We could have developed the things that OFBiz offers, but if a tool exists,
 why build the tool from scratch?  We have been able to concentrate on new
 features rather than concentrate on whether or not the controller we just
-built is working correctly.
+built is working correctly.</p>
 
 <div class="contenttext"><b>Ken Fultz (<a href="mailto:ken.fultz@icentris.com">ken.fultz@icentris.com</a>)</b></div>
 <div class="contenttext"><b>Vice-President of Information Technology</b></div>
 <div class="contenttext"><b>iCentris, Inc (<a href="http://www.icentris.com" target="_blank">www.icentris.com</a>)</b></div>
-<br>
+<br/>
 <div class="contenttext">Deployed Shopping Cart (in use since Q1 2002) - $60 Million Company</div>
 <div class="contenttext">Deployed Shopping Cart and User Tools - $40 Million Company</div>
 
-<br>
+<br/>
 <div class="contenttext">Live site: <b><a href="https://www.discoverytoyslink.com/LeslieBagley/topFrameset.html?bottomFrame=https%3A%2F%2Fshop.discoverytoyslink.com%2Fecommerce%2Fcontrol%2FenterFromWebPage%3FREFERRING_USER_ID%3DBAG030%26REFERRING_COUNTRY_OF_BUSINESS%3DUS" target="_blank">Discovery Toys</a></b></div>
 <!-- =============================================================== -->
-<br>
-<hr class="sepbar">
+<br/>
+<hr class="sepbar"/>
 <!-- =============================================================== -->
 <!-- =============================================================== -->
 
