Added some new case study and testimonial material from Chris Chesney and Manuel Meyer
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5133 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/index.html
+++ b/website/index.html
@@ -301,6 +301,9 @@
         For details and registration information please see the <a href="http://lists.ofbiz.org/pipermail/users/2005-May/007887.html" target="_blank">official announcement</a> on the OFBiz Users mailing list, 
         and the <a href="http://lists.ofbiz.org/pipermail/users/2005-May/007926.html" target="_blank">preview/update</a> with more information about what you'll see there.
         </p>
+
+        <p class="contenttext">See the Case Study from Integral Business Solutions about their projects
+          based on OFBiz, especially recent work they have done for the US Air Force. <a href="IntegralAirForceCaseStudy.pdf">Download the complete document here.</a></p>
         
         <p>OFBiz Basic Production Setup document Now Available: <a href="http://www.undersunconsulting.com/control/onlineinfo.html?atc=OFB">OFBiz Production Setup Guide</a>.
         This is a free download meant to help you get going with OFBiz. It is sponsored by 
