Added links to the new Xinit site, and testimonial from Ian Gilbert
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5185 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/index.html
+++ b/website/index.html
@@ -289,6 +289,7 @@
             <a href="http://shop.theuhl.com/lp/main" target="_blank">**UHL Shop</a>
             <a href="http://www.ulta.com/control/main" target="_blank">***Ulta</a>
             <a href="http://www.utahsbest.com/" target="_blank">*Utah's Best</a>
+            <a href="http://store.xinit.com/ecommerce/control/main" target="_blank">***Xinit Systems</a>
         </p>
       </div>
 
