added RSS log to SVN page
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5351 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/svn.html
+++ b/website/svn.html
@@ -53,6 +53,7 @@
                       <td align="left">
                         <div>&nbsp;-&nbsp;<a class='buttontext' href="http://svn.ofbiz.org/viewcvs"><b>SVN - ViewCVS</b></a></div>
                         <div>&nbsp;-&nbsp;<a class='buttontext' href="http://svn.ofbiz.org/svn/ofbiz"><b>SVN - Browse</b></a></div>
+                        <div>&nbsp;-&nbsp;<a class='buttontext' href="http://www.ofbiz.org/rss/svnlog.rss"><b>SVN - Log (RSS)</b></a></div>
                       </td>
                     </tr>
                   </table>
