--- a/website/index.html
+++ b/website/index.html
@@ -185,9 +185,8 @@
     
     <div id="detail-column">
       <div id="special">
-        <h2>The 2005 OFBiz Users Conference is Coming Very Soon! Register Now!</h2>
-        <p>The conference is in St. Louis, MO this year on the 21-22 of July. There will also be 2 days of training on OFBiz on the 19-20 of July. 
-        See the <a href="http://lists.ofbiz.org/pipermail/users/2005-July/008161.html" target="_blank">latest update on the 2005 OFBiz Users Conference</a> with detailed session information and everything you need to know to attend.</p>
+        <h2>The 2005 OFBiz Users Conference is Happening Now!</h2>
+        <p>The conference is in St. Louis, MO this year on the 21-22 of July. There were also be 2 days of training on OFBiz on the 19-20 of July.</p>
       </div>
       
       <div id="intro">
