--- a/website/index.html
+++ b/website/index.html
@@ -185,8 +185,7 @@
     
     <div id="detail-column">
       <div id="special">
-        <h2>The 2005 OFBiz Users Conference is Happening Now!</h2>
-        <p>The conference is in St. Louis, MO this year on the 21-22 of July. There were also be 2 days of training on OFBiz on the 19-20 of July.</p>
+        <p>The 2005 OFBiz Users Conference turned out Great! Keep an eye out for the recordings, will have an announcement out soon...</p>
       </div>
       
       <div id="intro">
@@ -247,7 +246,7 @@
             <a href="http://beehot.online.sh.cn/ecommerce/control/main" target="_blank">**Beehot (Chinese)</a>
             <a href="http://www.bigislandsams.com/" target="_blank">*Big Island Sam's</a>
             <a href="http://www.biowaves.com/" target="_blank">*BioWaves</a>
-            <a href="http://www.borngifted.co.uk/baby-gifts/main" target="_blank">Born Gifted</a>
+            <a href="http://www.borngifted.co.uk/baby-gifts/main" target="_blank">**Born Gifted</a>
             <a href="http://www.cactusbike.com/store/control/main" target="_blank">*Cactus Bike</a>
             <a href="http://hello2.cellularone.com/" target="_blank">**CellularOne (flash front-end)</a>
             <a href="https://www.discoverytoyslink.com/LeslieBagley/topFrameset.html?bottomFrame=https%3A%2F%2Fshop.discoverytoyslink.com%2Fecommerce%2Fcontrol%2FenterFromWebPage%3FREFERRING_USER_ID%3DBAG030%26REFERRING_COUNTRY_OF_BUSINESS%3DUS" target="_blank">*Discovery Toys</a>
