Changed derby URL, now out of incubation on Apache
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5456 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/index.html
+++ b/website/index.html
@@ -388,11 +388,11 @@
                       <a class="sub-link" href="http://jakarta.apache.org/oro/index.html" target="_blank">ORO</a>
                       <a class="sub-link" href="http://jakarta.apache.org/poi/index.html" target="_blank">POI</a>
                   <a href="http://openjms.sf.net/" target="_blank">OpenJMS</a>
+                  <a href="http://www.postgresql.org/" target="_blank">PostgreSQL</a>
                   <a href="http://www.mysql.com" target="_blank">MySQL</a>
                   <a href="http://www.mysql.com/products/maxdb/index.html" target="_blank">MaxDB by MySQL</a>
-                  <a href="http://www.postgresql.org/" target="_blank">PostgreSQL</a>
                   <a href="http://hsqldb.sf.net/" target="_blank">Hypersonic SQL</a>
-                  <a href="http://incubator.apache.org/derby/" target="_blank">Derby</a>
+                  <a href="http://db.apache.org/derby/" target="_blank">Derby</a>
               </p>
 
               <p>Related Standards:
