Added open source strategies service provider listings
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5463 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/index.html
+++ b/website/index.html
@@ -163,6 +163,7 @@
         
         <h2>Premium Service Providers</h2>
         <a href="http://www.undersunconsulting.com/control/home.html?atc=OFB" target="_blank">Undersun Consulting LLC</a>              
+        <a href="http://www.opensourcestrategies.com/ofbiz/" target="_blank"><b>Open Source Strategies, Inc.</b></a>
         <a href="http://www.automationgroups.com" target="_blank"><b>Automation Groups International</b></a>
         <a href="http://www.go-integral.com" target="_blank"><b>Integral Business Solutions</b></a>
         <a href="http://www.nereide.biz" target="_blank"><b>Nereide</b></a>
