--- a/website/services.html
+++ b/website/services.html
@@ -202,6 +202,10 @@
                   <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="http://www.undersunconsulting.com/control/home.html?atc=OFB" target="_blank"><b>www.undersunconsulting.com</b></a></div>
                   <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="mailto:info@undersunconsulting.com"><b>info@undersunconsulting.com</b></a></div>
                   
+                  <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.opensourcestrategies.com/ofbiz/" target="_blank"><b>Open Source Strategies, Inc.</b></a></div>
+                  <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="http://www.opensourcestrategies.com/ofbiz/" target="_blank"><b>www.opensourcestrategies.com</b></a></div>
+                  <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="mailto:info@opensourcestrategies.com"><b>info@opensourcestrategies.com</b></a></div>
+                  
                   <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.automationgroups.com" target="_blank"><b>Automation Groups International</b></a></div>
                   <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="http://www.automationgroups.com" target="_blank"><b>www.automationgroups.com</b></a></div>
                   <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="mailto:byersa@automationgroups.com"><b>byersa@automationgroups.com</b></a></div>
