--- a/specialized/opentravelsystem/webapp/HotelSimple/html/index.html
+++ b/specialized/opentravelsystem/webapp/HotelSimple/html/index.html
@@ -42,34 +42,27 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 
 // Open travel System link in new window 
 function newWin(){
-x=10;   
-if (parseInt(navigator.appVersion)>=4){
-   window.open("","test","scrollbars=yes,width="+((screen.width/100)*50)+",height="+(((screen.height/100)*85)-0)+",left="+((screen.width/100)*20)+",top="+((screen.height/100)*14))
-   }
-else {
-    window.open("","test","scrollbars=yes,width=500,height=600");
-   }
-}
+	window.open("","test","scrollbars=yes,width=500,height=600");
+	}
 </script>
 </head>
 
-<body leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0"  marginwidth="0" marginheight="0" >
+<bodyleftmargin="0" topmargin="0" rightmargin="0" bottommargin="0"  marginwidth="0" marginheight="0" >
 
-<table width="100%" height="100%" border="1" cellpadding="0" cellspacing="0">
+<table width="100%" height="100%" border="0" cellpadding="0" cellspacing="0">
   <tr>
-    <td height="35" bgcolor="#666666"> 
-      <div align="center">
-        <p span class="credits"><font color="#FFFFFF">Booking links:</font></br><font color="#FFFFFF"> 
-            </font><a href="../control/main" onclick="newWin()"><font color="#FFFFFF">List of Suites</font></a>
-          - </font><a href="../control/product/~product_id=HS10000" target="test" onclick="newWin()"><font color="#FFFFFF">BOOK Suite 1</font></a>
-          - </font><a href="../control/product/~category_id=HotelSimple/~product_id=HS10010" target="test" onclick="newWin()"><font color="#FFFFFF">BOOK Suite 2</font></a>
-          - </font><a href="../control/product/~category_id=HotelSimple/~product_id=HS10020" target="test" onclick="newWin()"><font color="#FFFFFF">BOOK Suite 3</font></a>
-          - </font><a href="../control/product/~category_id=HotelSimple/~product_id=HS10021" target="test" onclick="newWin()"><font color="#FFFFFF">BOOK all 3 Suites</font></a>
-        </p>
-      </div></td>
+    <td class="credits" height="35" bgcolor="#666666" align="center"> 
+      	Booking links:<br/>
+            <a style="color:#FFFFFF;font:11px Verdana, Arial, Helvetica, sans-serif;text-decoration:none;" href="../control/main" target="test" onclick="newWin()">List of Suites</a>
+          - <a style="color:#FFFFFF;font:11px Verdana, Arial, Helvetica, sans-serif;text-decoration:none;" href="../control/product/~product_id=HS10000" target="test" onclick="newWin()">BOOK Suite 1</a>
+          - <a style="color:#FFFFFF;font:11px Verdana, Arial, Helvetica, sans-serif;text-decoration:none;" href="../control/product/~category_id=HotelSimple/~product_id=HS10010" target="test" onclick="newWin()">BOOK Suite 2</a>
+          - <a style="color:#FFFFFF;font:11px Verdana, Arial, Helvetica, sans-serif;text-decoration:none;" href="../control/product/~category_id=HotelSimple/~product_id=HS10020" target="test" onclick="newWin()">BOOK Suite 3</a>
+          - <a style="color:#FFFFFF;font:11px Verdana, Arial, Helvetica, sans-serif;text-decoration:none;" href="../control/product/~category_id=HotelSimple/~product_id=HS10021" target="test" onclick="newWin()">BOOK all 3 Suites</a>
+		</td>
   </tr>
-  <tr height="15"><td>
-  <center>In the top menu demo links are provided as an example<br/>
+  <tr height="15"><td style="border-bottom:3px solid #D8D0C8;line-height:13px;padding:3px" class="text" style="text-align:center">
+  <center>
+  In the top menu demo links are provided as an example<br/>
   they can be placed anywhere in an existing website<br/>The page below is for decoration only...it is not functional.</center>
   </td></tr>
   <tr>
@@ -131,7 +124,7 @@ else {
       <!-- InstanceEndEditable --></td>
   </tr>
 <tr>
-    <td height="10"   class="text" > 
+    <td style="border-top:8px solid #D8D0C8" height="10"   class="text" > 
       <div align="center" ><strong><font color="#725E4E">Laan van Meerdervoort 
         155, NL 2517 AX The Hague - Tel: +31 (0)70 364 78 79 - Fax: +31 (0)70 345 
         65 33</font> </strong></div></td>
