Added link to Sequoia, also added license information for derivative projects
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5804 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/index.html
+++ b/website/index.html
@@ -231,10 +231,11 @@
         <p>It's hard to say who and how many organizations are using OFBiz because you don't have to tell us when you use it, but there are lots of public sites and we've listed some of them for you here.</p>
         
         <p>Products based on OFBiz:
-            <a href="http://www.myaffiliateprogram.com/u/mvelopes/t.asp?id=1138" target="_blank">Mvelopes (FREE TRIAL!)</a>
-            <a href="http://www.atlassian.com/software/jira/default.jsp" target="_blank">Atlassian JIRA</a>
-            <a href="http://neogia.labs.libre-entreprise.org/index.html" target="_blank">Neogia</a>
-            <a href="http://sourcetapcrm.sourceforge.net" target="_blank">SourceTap CRM</a>
+            <a href="http://www.myaffiliateprogram.com/u/mvelopes/t.asp?id=1138" target="_blank">Mvelopes (FREE TRIAL!) (Commercial-Service)</a>
+            <a href="http://www.atlassian.com/software/jira/default.jsp" target="_blank">Atlassian JIRA (Commercial)</a>
+            <a href="http://www.sequoiaerp.org/index.php" target="_blank">Sequoia Open Source ERP (MIT)</a>
+            <a href="http://neogia.labs.libre-entreprise.org/index.html" target="_blank">Neogia (GPL)</a>
+            <a href="http://sourcetapcrm.sourceforge.net" target="_blank">SourceTap CRM (GPL/Commercial)</a>
             <a href="http://www.mietta.info" target="_blank">XtraMind Mietta 2</a>
             <!-- <a href="http://www.linux-at-business.com/article.php3?id_article=64" target="_blank">Linux@Business INF (French)</a> -->
         </p>
