--- a/website/index.html
+++ b/website/index.html
@@ -168,10 +168,11 @@
         <a href="http://www.opensourcestrategies.com/ofbiz/" target="_blank"><b>Open Source Strategies, Inc.</b></a>
         <a href="http://www.automationgroups.com" target="_blank"><b>Automation Groups International</b></a>
         <a href="http://www.go-integral.com" target="_blank"><b>Integral Business Solutions</b></a>
+        <a href="http://www.sykesdevelopment.com/" target="_blank"><b>Sykes Development</b></a>
         <a href="http://www.nereide.biz" target="_blank"><b>Nereide</b></a>
         <a href="mailto:dirk.osterkamp@agrenon.com" target="_blank"><b>Agrenon GmbH</b></a>
-        <a href="http://www.smedia.info/ofbiz/ofbizhosting.asp" target="_blank"><b>sMedia eCommerce</b></a>
         <a href="http://www.softtechllc.com" target="_blank"><b>Softtech LLC</b></a>
+        <a href="http://www.smedia.info/ofbiz/ofbizhosting.asp" target="_blank"><b>sMedia eCommerce</b></a>
 
         <h2>Cool Sites</h2>
         <a href="http://www.java.net" target="_blank">Java.Net</a>
