Fixed andrew's email link
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5813 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/services.html
+++ b/website/services.html
@@ -216,7 +216,7 @@
                   
                   <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.sykesdevelopment.com/" target="_blank"><b>Sykes Development</b></a></div>
                   <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="http://www.sykesdevelopment.com/" target="_blank"><b>www.sykesdevelopment.com</b></a></div>
-                  <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="mailto:mailto:andrew@sykesdevelopment.com"><b>mailto:andrew@sykesdevelopment.com</b></a></div>
+                  <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="mailto:andrew@sykesdevelopment.com"><b>andrew@sykesdevelopment.com</b></a></div>
                   
                   <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.nereide.biz" target="_blank"><b>Nereide</b></a></div>
                   <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="http://www.nereide.biz" target="_blank"><b>www.nereide.biz</b></a></div>
