Fixed sykes dev name
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5814 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/index.html
+++ b/website/index.html
@@ -168,7 +168,7 @@
         <a href="http://www.opensourcestrategies.com/ofbiz/" target="_blank"><b>Open Source Strategies, Inc.</b></a>
         <a href="http://www.automationgroups.com" target="_blank"><b>Automation Groups International</b></a>
         <a href="http://www.go-integral.com" target="_blank"><b>Integral Business Solutions</b></a>
-        <a href="http://www.sykesdevelopment.com/" target="_blank"><b>Sykes Development</b></a>
+        <a href="http://www.sykesdevelopment.com/" target="_blank"><b>Sykes Development Ltd</b></a>
         <a href="http://www.nereide.biz" target="_blank"><b>Nereide</b></a>
         <a href="mailto:dirk.osterkamp@agrenon.com" target="_blank"><b>Agrenon GmbH</b></a>
         <a href="http://www.softtechllc.com" target="_blank"><b>Softtech LLC</b></a>
