--- a/website/services.html
+++ b/website/services.html
@@ -214,7 +214,7 @@
                   <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="http://www.go-integral.com" target="_blank"><b>www.go-integral.com</b></a></div>
                   <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="mailto:info@go-integral.com"><b>info@go-integral.com</b></a></div>
                   
-                  <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.sykesdevelopment.com/" target="_blank"><b>Sykes Development</b></a></div>
+                  <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.sykesdevelopment.com/" target="_blank"><b>Sykes Development Ltd</b></a></div>
                   <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="http://www.sykesdevelopment.com/" target="_blank"><b>www.sykesdevelopment.com</b></a></div>
                   <div>&nbsp;&nbsp;&nbsp;<a class="buttontext" href="mailto:andrew@sykesdevelopment.com"><b>andrew@sykesdevelopment.com</b></a></div>
                   
