Removed play-music.net references based on tip from Andrew
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5858 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/index.html
+++ b/website/index.html
@@ -282,7 +282,7 @@
             <a href="http://www.oldglory.com/lp/main" target="_blank">**Old Glory</a>
             <a href="http://www.partnerhomes.com" target="_blank">**Partner Homes</a>
             <a href="http://www.thepatchworkpig.co.uk/pwp/control/home" target="_blank">*the patchwork pig</a>
-            <a href="http://www.play-music.net/ecommerce/control/main" target="_blank">**PlayMusic</a>
+            <!--appears to be shut down now: <a href="http://www.play-music.net/ecommerce/control/main" target="_blank">**PlayMusic</a>-->
             <!--<a href="http://shop.qproproducts.net" target="_blank">QPro Products</a>-->
             <a href="http://www.reallycoolemail.com/control/main" target="_blank">*Really Cool Email</a>
             <a href="http://store.riverdogshockey.com/control/main" target="_blank">**Richmond RiverDogs</a>
