--- a/website/marketing.html
+++ b/website/marketing.html
@@ -292,7 +292,7 @@
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.oldglory.com/lp/main" target="_blank"><b>Old Glory</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.partnerhomes.com" target="_blank"><b>Partner Homes</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.thepatchworkpig.co.uk/pwp/control/main" target="_blank"><b>the patchwork pig</b></a></div>
-              <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.play-music.net/ecommerce/control/main" target="_blank"><b>PlayMusic</b></a></div>
+              <!--appears to be shut down now: <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.play-music.net/ecommerce/control/main" target="_blank"><b>PlayMusic</b></a></div>-->
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://shop.qproproducts.net" target="_blank"><b>QPro Products</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://www.reallycoolemail.com/control/main" target="_blank"><b>Really Cool Email</b></a></div>
               <div>&nbsp;-&nbsp;<a class="buttontext" href="http://store.riverdogshockey.com/control/main" target="_blank"><b>Richmond RiverDogs</b></a></div>
