Added Getting And Using OFBiz document
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6109 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/website/index.html
+++ b/website/index.html
@@ -129,6 +129,7 @@
         <a href="https://test.opentravelsystem.org/hotelbackend/control/login/main?USERNAME=demoadmin&amp;PASSWORD=ofbiz" target="_blank">Hotel Backend</a>
 
         <h2>Download OFBiz</h2>
+        <a href="http://www.ofbiz.org/docs/GettingAndUsingOFBiz.pdf">Getting And Using OFBiz (PDF)</a>
         <a href="http://www.undersunconsulting.com/control/onlineinfo.html?atc=OFB">Production Setup Guide</a>
         <a href="http://svn.ofbiz.org">Source Access (Recommended)</a>
         <a href="releasenotes.html"><b>Release Notes</b></a>
